# conan-vscode-extension

./: .travis.yml  .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
src/: build.ts  create.ts  extension.ts  install.ts  new_package.ts  new_profile.ts  search_conan_center.ts  select_profile.ts  state.ts
src/conan/: client.ts
src/templates/: conanfile_header_only.py  conanfile_library.py
templates/: CMakeLists.txt  conanfile.py  header.h  source.cpp
templates/test_package/: conanfile.py  test_package.cpp
